[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/fx/cloud01.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/fx/cloud02.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/fx/shock-wave.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/fx/cloud03.obj" type="ArrayMesh" id=4]
[ext_resource path="res://FX/Explosion.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/explosion.wav" type="AudioStream" id=6]

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 3, 2, 2, 0.22 )

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0.25641, 0.576923, 0.846154, 1 )
colors = PoolColorArray( 0.975586, 0, 0, 1, 1, 0.572549, 0, 1, 0.980392, 1, 0.372549, 0.517647, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )

[sub_resource type="Curve" id=6]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 6 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.107468 ), 0.0, 0.309188, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=13]
direction = Vector3( 0.2, 0, 0.2 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.1
angular_velocity = 720.0
angular_velocity_random = 1.0
damping = 3.0
damping_curve = SubResource( 5 )
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 3 )
color_ramp = SubResource( 21 )

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0, 0.666667, 1 )
colors = PoolColorArray( 0.705882, 0.705882, 0.705882, 0.258824, 0.152903, 0.180327, 0.224922, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 22 )

[sub_resource type="ParticlesMaterial" id=7]
direction = Vector3( 0.2, 0, 0.2 )
spread = 180.0
gravity = Vector3( 0, 2, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.1
angular_velocity = 720.0
angular_velocity_random = 1.0
damping = 3.0
damping_curve = SubResource( 5 )
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 3 )
color_ramp = SubResource( 23 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 2, 1.5, 1, 0.38 )

[sub_resource type="ParticlesMaterial" id=8]
flag_align_y = true
direction = Vector3( 0.2, 0, 0.2 )
spread = 180.0
flatness = 0.79
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 3 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 10 )
size = Vector3( 0.001, 2, 0.2 )

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.329412, 0.360784, 0.427451, 1 )

[sub_resource type="Gradient" id=24]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 0 ), 0.0, 2.93239, 0, 0, Vector2( 0.395073, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.92163, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=28]
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 4.0
initial_velocity_random = 0.1
angular_velocity = 720.0
angular_velocity_random = 1.0
damping = 1.0
damping_curve = SubResource( 5 )
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 27 )
color_ramp = SubResource( 25 )

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.909804, 0.956863, 1, 0.486275 )

[sub_resource type="Animation" id=12]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("ShockWave:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, 0 ), Vector3( 5, 0.15, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShockWave:material_override:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.956863, 1, 0.486275 ), Color( 0.909804, 0.956863, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OmniLight:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OmniLight:light_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.756863, 0.109804, 0, 1 ), Color( 1, 0.568627, 0, 1 ), Color( 1, 0.792157, 0.145098, 1 ) ]
}

[node name="Explosion" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.311915, 0 )
script = ExtResource( 5 )

[node name="Fire" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0394468, 0, -0.0546322 )
layers = 524288
material_override = SubResource( 14 )
cast_shadow = 0
amount = 128
lifetime = 2.0
explosiveness = 1.0
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 13 )
draw_pass_1 = ExtResource( 4 )

[node name="SmokeCloud" type="Particles" parent="."]
layers = 524288
material_override = SubResource( 15 )
amount = 128
lifetime = 2.0
explosiveness = 1.0
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 7 )
draw_pass_1 = ExtResource( 2 )

[node name="Debree" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.102369, 0, -0.201156 )
material_override = SubResource( 10 )
amount = 128
lifetime = 0.5
explosiveness = 0.85
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 9 )

[node name="SmokeRing" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0194869, 0, 0.0643125 )
layers = 524288
material_override = SubResource( 16 )
amount = 128
lifetime = 2.0
explosiveness = 1.0
visibility_aabb = AABB( -2.5, -0.5, -2.5, 5, 5, 5 )
process_material = SubResource( 28 )
draw_pass_1 = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.322656, 0 )
light_color = Color( 0.756863, 0.109804, 0, 1 )
light_energy = 0.0
light_cull_mask = 4294443007
omni_range = 7.0

[node name="ShockWave" type="MeshInstance" parent="."]
transform = Transform( 0, 0, 0, 0, 0.15, 0, 0, 0, 0, 0.0725873, 0.238021, -0.218445 )
visible = false
material_override = SubResource( 11 )
mesh = ExtResource( 3 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 12 )

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_size = 7.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
